--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "Untrapped",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "content_scripts": [
         {
             "matches": [
@@ -12,5 +12,8 @@
                 "content.js"
             ]
         }
-    ]
+    ],
+    "background": {
+        "service_worker": "background.js"
+    }
 }
