Fix content.js: resolved issue with home page not behaving as intended

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,9 @@
             
             "js": [
                 "content.js"
-            ]
+            ],
+
+            "run_at": "document_end"
         }
     ],
     "background": {
