Redesign extension UI and add event listeners
This commit redesigns the extension user interface, opting for a simpler and more user-friendly approach. Additionally, it adds event listeners to the home feed and recommended videos elements, allowing the extension to track whether these options are checked or unchecked. A console.log message has also been added to confirm that the popup.js file is working.

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,9 @@
         {
             "resources": [
                 "assets/untrapped.png",
-                "assets/untrapped.svg"
+                "assets/untrapped.svg",
+                "https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js",
+                "https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             ],
             "matches": ["https://*.youtube.com/*"]
         }
